--- a/dbt_project/sentiment_analysis/dbt_project.yml
+++ b/dbt_project/sentiment_analysis/dbt_project.yml
@@ -32,5 +32,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   sentiment_analysis:
     # Config indicated by + and applies to all files under models/example/
-    example:
+    staging:
       +materialized: view
+    intermediate:
+      +materialized: view
+    mart:
+      +materialized: table
+    
