--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ airflow/logs/
 airflow/plugins/
 airflow/dags/__pycache__/
 airflow/dags/*.pyc
+airflow/config/airflow.cfg
 
 # dbt
 dbt_project/sentiment_analysis/target/
